--- a/kids.html
+++ b/kids.html
@@ -76,36 +76,36 @@
        data-title="Toy Adventure"
        data-summary="A fun adventure with toys that come to life."
        data-actors="Tom Hanks, Tim Allen"
-       data-img="toy.jpeg"
+       data-img="https://picsum.photos/400/300?random=1"
        data-trailer="https://www.youtube.com/embed/KYz2wyBy3kc">
-    <img src="toy.jpeg" alt="Toy Adventure">
+    <img src="https://picsum.photos/400/300?random=1" alt="Toy Adventure">
   </div>
 
   <div class="movie-card"
        data-title="Magic School"
        data-summary="Kids discover magical powers in a secret school."
        data-actors="Emma Watson, Daniel Radcliffe"
-       data-img="magic.jpeg"
+       data-img="https://picsum.photos/400/300?random=2"
        data-trailer="https://www.youtube.com/embed/VQWqkZyCEOs">
-    <img src="magic.jpeg" alt="Magic School">
+    <img src="https://picsum.photos/400/300?random=2" alt="Magic School">
   </div>
 
   <div class="movie-card"
        data-title="Jungle Fun"
        data-summary="Kids and animals explore a magical jungle together."
        data-actors="Chris Pratt, Zoe Saldana"
-       data-img="jungle.jpeg"
+       data-img="https://picsum.photos/400/300?random=3"
        data-trailer="https://www.youtube.com/embed/fKXiFRU7zzc">
-    <img src="jungle.jpeg" alt="Jungle Fun">
+    <img src="https://picsum.photos/400/300?random=3" alt="Jungle Fun">
   </div>
 
   <div class="movie-card"
        data-title="Space Kids"
        data-summary="A group of kids travel across the galaxy on an adventure."
        data-actors="Millie Bobby Brown, Finn Wolfhard"
-       data-img="space.jpeg"
+       data-img="https://picsum.photos/400/300?random=4"
        data-trailer="https://www.youtube.com/embed/8X4FPi3FIMQ">
-    <img src="space.jpeg" alt="Space Kids">
+    <img src="https://picsum.photos/400/300?random=4" alt="Space Kids">
   </div>
 </section>
 
