--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="1.jpeg" alt="Banner 1">
+      <img src="1.jpg" alt="Banner 1">
     </div>
     <div class="slide">
-      <img src="2.jpeg" alt="Banner 2">
+      <img src="2.jpg" alt="Banner 2">
     </div>
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
@@ -292,4 +292,5 @@
 
 </body>
 </html>
+
 
