--- a/about.html
+++ b/about.html
@@ -1,294 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ageflix - Home</title>
-  <style>
-    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
-    body { background: #f0f0f0; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ageflix - About</title>
+<style>
+  * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
+  body { background: #111; color: #fff; overflow-x: hidden; }
+  
+  /* Navbar */
+  nav.navbar { display: flex; align-items: center; justify-content: space-between; background-color: #111; color: #fff; padding: 10px 20px; flex-wrap: wrap; }
+  .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
+  .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
+  .navbar ul li { margin: 0 15px; }
+  .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
+  .navbar .icon { flex: 1; text-align: right; }
 
-    /* Navbar */
-    nav.navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #111;
-      color: #fff;
-      padding: 10px 20px;
-      flex-wrap: wrap;
-    }
-    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
-    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
-    .navbar ul li { margin: 0 15px; }
-    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-    .navbar .icon { flex: 1; text-align: right; }
+  /* About Section */
+  section.about { padding: 40px 20px; text-align: center; }
+  section.about h1 { font-size: 32px; margin-bottom: 20px; color: #e50914; }
+  section.about p { font-size: 18px; max-width: 800px; margin: 0 auto 30px; line-height: 1.6; }
 
-    /* Project description / marquee */
-    .marquee-container {
-      width: 100%;
-      overflow: hidden;
-      background: #222;
-      color: #fff;
-      font-size: 22px;
-      padding: 10px 0;
-      position: relative;
-    }
-    .marquee {
-      display: inline-block;
-      white-space: nowrap;
-      animation: marquee 15s linear infinite;
-    }
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
+  /* Team Carousel */
+  .carousel-container { position: relative; width: 100%; overflow: hidden; padding: 20px 0; }
+  .carousel-track { display: flex; gap: 20px; transition: transform 0.5s ease-in-out; }
+  .carousel-card { min-width: 200px; border-radius: 10px; overflow: hidden; position: relative; cursor: pointer; transition: transform 0.3s, opacity 1s; opacity: 0; }
+  .carousel-card.visible { opacity: 1; }
+  .carousel-card img { width: 100%; height: 250px; object-fit: cover; transition: transform 0.3s; }
+  .carousel-card:hover img { transform: scale(1.1); }
+  .carousel-card .overlay { position: absolute; bottom: 0; left: 0; width: 100%; height: 0; background: rgba(0,0,0,0.7); color: #fff; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 10px; overflow: hidden; transition: height 0.3s; }
+  .carousel-card:hover .overlay { height: 100%; }
 
-    /* Banner Slider */
-    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
-    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
-    .slide.active { opacity: 1; z-index: 2; }
-    .slide img { width: 100%; height: 100%; object-fit: cover; }
-    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
-    .prev { left: 10px; }
-    .next { right: 10px; }
-
-    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
-    .dot.active { background-color: #fff; }
-
-    /* Hero / Webcam */
-    section.hero { text-align: center; padding: 20px; }
-    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
-    section.hero p { font-size: 20px; margin-bottom: 20px; }
-    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
-    #webcam-container, #label-container { margin: 15px auto; }
-
-    /* Static images section */
-    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
-    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
-
-    /* Responsive */
-    @media(max-width:768px){
-      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
-      section.hero h1 { font-size: 24px; }
-      section.hero p { font-size: 16px; }
-      .slide-text { font-size: 18px; }
-      button#startBtn { font-size: 16px; }
-      .marquee-container { font-size: 18px; }
-      .static-images img { width: 90%; height: auto; }
-    }
-  </style>
+  @media(max-width:768px){
+    section.about h1 { font-size: 24px; }
+    section.about p { font-size: 16px; }
+    .carousel-card img { height: 180px; }
+  }
+</style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Ageflix</div>
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="movies.html">Movies</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <div class="icon">🎬</div>
-  </nav>
+<nav class="navbar">
+  <div class="logo">Ageflix</div>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="movies.html">Movies</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <div class="icon">🎬</div>
+</nav>
 
-  <!-- Marquee / Moving Text -->
-  <div class="marquee-container">
-    <div class="marquee" id="marqueeText"></div>
-  </div>
+<section class="about">
+  <h1>About Ageflix Project</h1>
+  <p>
+    Ageflix is an innovative project that uses AI to detect the user's age and recommend movies suitable for their age group.  
+    We aimed to create a safe and personalized movie experience for kids, adults, and seniors.  
+    Our team worked collaboratively to design the interface, integrate Teachable Machine for age detection, and build an interactive platform similar to Netflix.
+  </p>
 
-  <!-- Banner Slider -->
-  <section class="banner-slider" id="bannerSlider">
-    <div class="slide active">
-      <img src="1.jpeg" alt="Banner 1">
-    </div>
-    <div class="slide">
-      <img src="2.jpeg" alt="Banner 2">
-    </div>
-    <button class="prev">&#10094;</button>
-    <button class="next">&#10095;</button>
-    <div class="dots"></div>
-  </section>
-
-  <!-- Hero / Age Detection -->
-  <section class="hero">
-    <h1>Welcome to Ageflix</h1>
-    <p>Discover movies according to your age group!</p>
-
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
-
-    <button id="startBtn">Start Camera & Detect Age</button>
-  </section>
-
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
-
-  <script>
-    // دمج كشف العمر + رسالة + Next + Loading
-    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-    let model, webcam, maxPredictions;
-    let detected = false;
-
-    async function init() {
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
-      model = await tmImage.load(modelURL, metadataURL);
-      maxPredictions = model.getTotalClasses();
-
-      const flip = true;
-      webcam = new tmImage.Webcam(400, 300, flip);
-      await webcam.setup();
-      await webcam.play();
-      document.getElementById("webcam-container").appendChild(webcam.canvas);
-      window.requestAnimationFrame(loop);
-    }
-
-    async function loop() {
-      webcam.update();
-      await predict();
-      if(!detected) window.requestAnimationFrame(loop);
-    }
-
-    async function predict() {
-      const prediction = await model.predict(webcam.canvas);
-      let labelContainer = document.getElementById("label-container");
-      labelContainer.innerHTML = "";
-      prediction.forEach(p => {
-        labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
-      });
-
-      const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
-      if(best.probability>0.85 && !detected){
-        detected = true;
-        showPopup(best.className);
-      }
-    }
-
-    function showPopup(userGroup){
-      const popup = document.createElement("div");
-      popup.id = "popup";
-      popup.innerHTML = `
-        <div class="popup-content">
-          <h2>You are <span>${userGroup}</span></h2>
-          <button id="nextBtn">Next ➜</button>
+  <h2 style="color:#e50914; margin-bottom:20px;">Meet the Team</h2>
+  <div class="carousel-container">
+    <div class="carousel-track" id="carouselTrack">
+      <div class="carousel-card">
+        <img src="https://picsum.photos/400/300?random=11" alt="Student 1">
+        <div class="overlay">
+          <h3>Student 1</h3>
+          <p>Front-end Developer</p>
         </div>
-      `;
-      document.body.appendChild(popup);
+      </div>
+      <div class="carousel-card">
+        <img src="https://picsum.photos/400/300?random=12" alt="Student 2">
+        <div class="overlay">
+          <h3>Student 2</h3>
+          <p>Back-end Developer</p>
+        </div>
+      </div>
+      <div class="carousel-card">
+        <img src="https://picsum.photos/400/300?random=13" alt="Student 3">
+        <div class="overlay">
+          <h3>Student 3</h3>
+          <p>UI/UX Designer</p>
+        </div>
+      </div>
+      <div class="carousel-card">
+        <img src="https://picsum.photos/400/300?random=14" alt="Maysa">
+        <div class="overlay">
+          <h3>Maysa</h3>
+          <p>Project Lead</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-      document.getElementById("nextBtn").addEventListener("click", ()=>{
-        popup.remove();
-        showLoading(userGroup);
-      });
+<script>
+  const track = document.getElementById('carouselTrack');
+  let position = 0;
+  const cardWidth = 220; // تقريباً مع الفجوة
+
+  function moveCarousel() {
+    position -= 1;
+    if(Math.abs(position) >= track.scrollWidth - track.parentElement.offsetWidth){
+      position = 0;
     }
+    track.style.transform = `translateX(${position}px)`;
+  }
 
-    function showLoading(userGroup){
-      const loadingScreen = document.createElement("div");
-      loadingScreen.id = "loading-screen";
-      loadingScreen.innerHTML = `
-        <div class="loader"></div>
-        <p class="loading-text">Loading your movies...</p>
-      `;
-      document.body.appendChild(loadingScreen);
+  let interval = setInterval(moveCarousel, 30);
 
-      setTimeout(()=>{
-        loadingScreen.remove();
-        if(userGroup.toLowerCase()==="kids"||userGroup.toLowerCase()==="kid") window.location.href="kids.html";
-        else if(userGroup.toLowerCase()==="adult") window.location.href="adult.html";
-        else if(userGroup.toLowerCase()==="senior") window.location.href="senior.html";
-        else location.reload();
-      }, 3000);
-    }
+  // توقف عند Hover
+  const container = document.querySelector('.carousel-container');
+  container.addEventListener('mouseenter', ()=> clearInterval(interval));
+  container.addEventListener('mouseleave', ()=> interval = setInterval(moveCarousel,30));
 
-    document.getElementById("startBtn").addEventListener("click", init);
-
-    // CSS للنافذة و التحميل
-    const style = document.createElement("style");
-    style.innerHTML = `
-      @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
-
-      #popup{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background: rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:9999;
-      }
-
-      .popup-content{
-        background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px;
-        text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6);
-        animation: fadeIn 0.5s ease;
-      }
-
-      .popup-content h2{ font-size:28px; margin-bottom:20px;}
-      .popup-content span{color:#e50914;font-weight:bold;}
-      #nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
-      #nextBtn:hover{background-color:#b00610;}
-
-      #loading-screen{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background-color:#000; display:flex; flex-direction:column; justify-content:center; align-items:center;
-        color:white; z-index:99999;
-      }
-
-      .loader{
-        border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%;
-        width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px;
-      }
-
-      .loading-text{font-size:20px;letter-spacing:1px;color:#fff;text-shadow:0 0 10px rgba(255,255,255,0.4);animation:pulse 1.5s ease-in-out infinite;}
-      @keyframes pulse{0%,100%{opacity:0.7;}50%{opacity:1;}}
-      @keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
-    `;
-    document.head.appendChild(style);
-
-    // باقي كود السلايدر و الماركي (كما لديك)...
-    const slides = document.querySelectorAll('.slide');
-    const prev = document.querySelector('.prev');
-    const nextBtn = document.querySelector('.next');
-    const dotsContainer = document.querySelector('.dots');
-    let slideIndex = 0;
-
-    function showSlide(index){
-      if(index<0) slideIndex=slides.length-1;
-      else if(index>=slides.length) slideIndex=0;
-      else slideIndex=index;
-      slides.forEach((s,i)=>{
-        s.classList.remove('active');
-        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
-      });
-      slides[slideIndex].classList.add('active');
-      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
-    }
-
-    prev.addEventListener('click',()=>showSlide(slideIndex-1));
-    nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
-
-    slides.forEach((_,i)=>{
-      const dot=document.createElement('span');
-      dot.classList.add('dot');
-      if(i===0) dot.classList.add('active');
-      dot.addEventListener('click',()=>showSlide(i));
-      dotsContainer.appendChild(dot);
-    });
-
-    // Marquee
-    const marqueeTextElem = document.getElementById('marqueeText');
-    const marqueeMessages = [
-      "Ageflix recommends movies based on your age",
-      "Find the perfect movie for kids, adults, and seniors",
-      "Your personalized movie guide!",
-      "Discover films suitable for your age",
-      "Enjoy movies safely with Ageflix"
-    ];
-    let marqueeIndex = 0;
-    function updateMarquee(){
-      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
-      marqueeIndex=(marqueeIndex+1)%marqueeMessages.length;
-    }
-    setInterval(updateMarquee,5000);
-    updateMarquee();
-  </script>
+  // Fade in عند تحميل الصفحة
+  const cards = document.querySelectorAll('.carousel-card');
+  cards.forEach((card, index)=>{
+    setTimeout(()=>{ card.classList.add('visible'); }, index * 200); // تأخير 200ms بين كل صورة
+  });
+</script>
 
 </body>
 </html>
