--- a/index.html
+++ b/index.html
@@ -1,296 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ageflix - Home</title>
-  <style>
-    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
-    body { background: #f0f0f0; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ageflix - Home</title>
 
-    /* Navbar */
-    nav.navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #111;
-      color: #fff;
-      padding: 10px 20px;
-      flex-wrap: wrap;
-    }
-    .navbar .logo { font-size: 24px; font-weight: bold; flex: 1; color: red; }
-    .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
-    .navbar ul li { margin: 0 15px; }
-    .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-    .navbar .icon { flex: 1; text-align: right; }
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-    /* Project description / marquee */
-    .marquee-container {
-      width: 100%;
-      overflow: hidden;
-      background: #222;
-      color: #fff;
-      font-size: 22px;
-      padding: 10px 0;
-      position: relative;
-    }
-    .marquee {
-      display: inline-block;
-      white-space: nowrap;
-      animation: marquee 15s linear infinite;
-    }
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
+* { box-sizing: border-box; margin:0; padding:0; font-family: 'Roboto', sans-serif; }
+body { 
+  background: linear-gradient(to bottom, #141414, #000);
+  color: #fff;
+}
 
-    /* Banner Slider */
-    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
-    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
-    .slide.active { opacity: 1; z-index: 2; }
-    .slide img { width: 100%; height: 100%; object-fit: cover; }
-    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
-    .prev { left: 10px; }
-    .next { right: 10px; }
+/* Navbar */
+nav.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0,0,0,0.9);
+  padding: 15px 30px;
+  flex-wrap: wrap;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+.navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; letter-spacing: 1px; }
+.navbar ul { display: flex; list-style: none; justify-content: center; align-items: center; margin: 0; padding: 0; }
+.navbar ul li { position: relative; margin: 0 20px; }
+.navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; font-size:16px; transition:0.3s; }
+.navbar ul li a:hover { color:#e50914; }
 
-    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
-    .dot.active { background-color: #fff; }
+/* Dropdown */
+.navbar ul li .dropdown {
+  display: none;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  background: #1c1c1c;
+  border-radius: 6px;
+  min-width: 140px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+  overflow: hidden;
+}
+.navbar ul li .dropdown a {
+  display: block;
+  padding: 10px 15px;
+  color: #fff;
+  font-weight: normal;
+  transition: 0.3s;
+}
+.navbar ul li .dropdown a:hover {
+  background: #e50914;
+}
+.navbar ul li:hover .dropdown {
+  display: block;
+  animation: fadeIn 0.3s ease;
+}
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(5px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
-    /* Hero / Webcam */
-    section.hero { text-align: center; padding: 20px; }
-    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
-    section.hero p { font-size: 20px; margin-bottom: 20px; }
-    button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
-    #webcam-container, #label-container { margin: 15px auto; }
+/* Banner Slider */
+.banner-slider {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background: #000;
+}
+.slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1.5s ease-in-out; }
+.slide.active { opacity: 1; z-index: 2; }
+.slide img { 
+  width: 100%; 
+  height: 100%; 
+  object-fit: contain; /* تظهر الصورة كاملة */
+  background: #000;
+}
 
-    /* Static images section */
-    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
-    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
+.prev, .next { 
+  position: absolute; 
+  top: 50%; 
+  transform: translateY(-50%); 
+  background-color: rgba(0,0,0,0.6); 
+  color: #fff; 
+  border: none; 
+  padding: 10px; 
+  cursor: pointer; 
+  font-size: 28px; 
+  z-index: 3; 
+  border-radius: 50%;
+  transition: background 0.3s;
+}
+.prev:hover, .next:hover { background: rgba(229,9,20,0.8); }
+.prev { left: 20px; }
+.next { right: 20px; }
 
-    /* Responsive */
-    @media(max-width:768px){
-      .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
-      section.hero h1 { font-size: 24px; }
-      section.hero p { font-size: 16px; }
-      .slide-text { font-size: 18px; }
-      button#startBtn { font-size: 16px; }
-      .marquee-container { font-size: 18px; }
-      .static-images img { width: 90%; height: auto; }
-    }
-  </style>
+.dots { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+.dot { width: 14px; height: 14px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; transition: background 0.3s; }
+.dot.active, .dot:hover { background-color: #e50914; }
+
+/* Hero Section */
+section.hero {
+  text-align: center;
+  padding: 80px 20px;
+}
+section.hero h1 {
+  font-size: 40px;
+  margin-bottom: 10px;
+  color: #fff;
+  letter-spacing: 1px;
+}
+section.hero p {
+  font-size: 20px;
+  color: #ccc;
+  margin-bottom: 30px;
+}
+
+/* Start Button */
+#startBtn {
+  padding: 15px 40px;
+  font-size: 20px;
+  background-color: #e50914;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  letter-spacing: 1px;
+  transition: 0.3s;
+}
+#startBtn:hover {
+  background-color: #b00610;
+  transform: scale(1.05);
+}
+
+/* Webcam */
+#webcam-container, #label-container {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+}
+
+/* Responsive */
+@media(max-width:768px){
+  .navbar ul { flex-direction: column; align-items: flex-start; }
+  .navbar ul li { margin: 10px 0; }
+  section.hero h1 { font-size: 28px; }
+  .banner-slider { height: 60vh; }
+  #startBtn { width: 80%; font-size: 18px; }
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Ageflix</div>
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="movies.html">Movies</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <div class="icon">🎬</div>
-  </nav>
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo">Ageflix</div>
+  <ul>
+    <li><a href="about.html">About</a></li>
+    <li>
+      <a href="#">Movies ▾</a>
+      <div class="dropdown">
+        <a href="kids.html">Kids</a>
+        <a href="adult.html">Adult</a>
+        <a href="senior.html">Senior</a>
+      </div>
+    </li>
+  </ul>
+</nav>
 
-  <!-- Marquee / Moving Text -->
-  <div class="marquee-container">
-    <div class="marquee" id="marqueeText"></div>
-  </div>
+<!-- Banner Slider -->
+<section class="banner-slider" id="bannerSlider">
+  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
+  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+  <div class="dots"></div>
+</section>
 
-  <!-- Banner Slider -->
-  <section class="banner-slider" id="bannerSlider">
-    <div class="slide active">
-      <img src="1.jpg" alt="Banner 1">
-    </div>
-    <div class="slide">
-      <img src="2.jpg" alt="Banner 2">
-    </div>
-    <button class="prev">&#10094;</button>
-    <button class="next">&#10095;</button>
-    <div class="dots"></div>
-  </section>
+<!-- Hero Section -->
+<section class="hero">
+  <h1>Welcome to Ageflix</h1>
+  <p>Discover movies according to your age group!</p>
 
-  <!-- Hero / Age Detection -->
-  <section class="hero">
-    <h1>Welcome to Ageflix</h1>
-    <p>Discover movies according to your age group!</p>
+  <div id="webcam-container"></div>
+  <div id="label-container"></div>
 
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
+  <button id="startBtn">Start Camera & Detect Age</button>
+</section>
 
-    <button id="startBtn">Start Camera & Detect Age</button>
-  </section>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
+<script>
+const slides = document.querySelectorAll('.slide');
+const prev = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
+const dotsContainer = document.querySelector('.dots');
+let slideIndex = 0;
 
-  <script>
-    // دمج كشف العمر + رسالة + Next + Loading
-    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-    let model, webcam, maxPredictions;
-    let detected = false;
+// سلايدر بانر
+function showSlide(index){
+  if(index<0) slideIndex=slides.length-1;
+  else if(index>=slides.length) slideIndex=0;
+  else slideIndex=index;
+  slides.forEach((s,i)=>{
+    s.classList.remove('active');
+    if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
+  });
+  slides[slideIndex].classList.add('active');
+  if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+}
+prev.addEventListener('click',()=>showSlide(slideIndex-1));
+nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
+slides.forEach((_,i)=>{
+  const dot=document.createElement('span');
+  dot.classList.add('dot');
+  if(i===0) dot.classList.add('active');
+  dot.addEventListener('click',()=>showSlide(i));
+  dotsContainer.appendChild(dot);
+});
+setInterval(()=>showSlide(slideIndex+1), 5000);
 
-    async function init() {
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
-      model = await tmImage.load(modelURL, metadataURL);
-      maxPredictions = model.getTotalClasses();
+// Teachable Machine setup
+const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+let model, webcam, maxPredictions;
 
-      const flip = true;
-      webcam = new tmImage.Webcam(400, 300, flip);
-      await webcam.setup();
-      await webcam.play();
-      document.getElementById("webcam-container").appendChild(webcam.canvas);
-      window.requestAnimationFrame(loop);
-    }
+async function init() {
+  const modelURL = URL + "model.json";
+  const metadataURL = URL + "metadata.json";
+  model = await tmImage.load(modelURL, metadataURL);
+  maxPredictions = model.getTotalClasses();
 
-    async function loop() {
-      webcam.update();
-      await predict();
-      if(!detected) window.requestAnimationFrame(loop);
-    }
+  const flip = true;
+  webcam = new tmImage.Webcam(400, 300, flip);
+  await webcam.setup();
+  await webcam.play();
+  document.getElementById("webcam-container").appendChild(webcam.canvas);
+  window.requestAnimationFrame(loop);
+}
 
-    async function predict() {
-      const prediction = await model.predict(webcam.canvas);
-      let labelContainer = document.getElementById("label-container");
-      labelContainer.innerHTML = "";
-      prediction.forEach(p => {
-        labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
-      });
+async function loop() {
+  webcam.update();
+  await predict();
+  window.requestAnimationFrame(loop);
+}
 
-      const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
-      if(best.probability>0.85 && !detected){
-        detected = true;
-        showPopup(best.className);
-      }
-    }
+async function predict() {
+  const prediction = await model.predict(webcam.canvas);
+  let labelContainer = document.getElementById("label-container");
+  labelContainer.innerHTML = "";
+  prediction.forEach(p => {
+    labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
+  });
+}
 
-    function showPopup(userGroup){
-      const popup = document.createElement("div");
-      popup.id = "popup";
-      popup.innerHTML = `
-        <div class="popup-content">
-          <h2>You are <span>${userGroup}</span></h2>
-          <button id="nextBtn">Next ➜</button>
-        </div>
-      `;
-      document.body.appendChild(popup);
-
-      document.getElementById("nextBtn").addEventListener("click", ()=>{
-        popup.remove();
-        showLoading(userGroup);
-      });
-    }
-
-    function showLoading(userGroup){
-      const loadingScreen = document.createElement("div");
-      loadingScreen.id = "loading-screen";
-      loadingScreen.innerHTML = `
-        <div class="loader"></div>
-        <p class="loading-text">Loading your movies...</p>
-      `;
-      document.body.appendChild(loadingScreen);
-
-      setTimeout(()=>{
-        loadingScreen.remove();
-        if(userGroup.toLowerCase()==="kids"||userGroup.toLowerCase()==="kid") window.location.href="kids.html";
-        else if(userGroup.toLowerCase()==="adult") window.location.href="adult.html";
-        else if(userGroup.toLowerCase()==="senior") window.location.href="senior.html";
-        else location.reload();
-      }, 3000);
-    }
-
-    document.getElementById("startBtn").addEventListener("click", init);
-
-    // CSS للنافذة و التحميل
-    const style = document.createElement("style");
-    style.innerHTML = `
-      @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
-
-      #popup{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background: rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:9999;
-      }
-
-      .popup-content{
-        background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px;
-        text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6);
-        animation: fadeIn 0.5s ease;
-      }
-
-      .popup-content h2{ font-size:28px; margin-bottom:20px;}
-      .popup-content span{color:#e50914;font-weight:bold;}
-      #nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
-      #nextBtn:hover{background-color:#b00610;}
-
-      #loading-screen{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background-color:#000; display:flex; flex-direction:column; justify-content:center; align-items:center;
-        color:white; z-index:99999;
-      }
-
-      .loader{
-        border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%;
-        width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px;
-      }
-
-      .loading-text{font-size:20px;letter-spacing:1px;color:#fff;text-shadow:0 0 10px rgba(255,255,255,0.4);animation:pulse 1.5s ease-in-out infinite;}
-      @keyframes pulse{0%,100%{opacity:0.7;}50%{opacity:1;}}
-      @keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
-    `;
-    document.head.appendChild(style);
-
-    // باقي كود السلايدر و الماركي (كما لديك)...
-    const slides = document.querySelectorAll('.slide');
-    const prev = document.querySelector('.prev');
-    const nextBtn = document.querySelector('.next');
-    const dotsContainer = document.querySelector('.dots');
-    let slideIndex = 0;
-
-    function showSlide(index){
-      if(index<0) slideIndex=slides.length-1;
-      else if(index>=slides.length) slideIndex=0;
-      else slideIndex=index;
-      slides.forEach((s,i)=>{
-        s.classList.remove('active');
-        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
-      });
-      slides[slideIndex].classList.add('active');
-      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
-    }
-
-    prev.addEventListener('click',()=>showSlide(slideIndex-1));
-    nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
-
-    slides.forEach((_,i)=>{
-      const dot=document.createElement('span');
-      dot.classList.add('dot');
-      if(i===0) dot.classList.add('active');
-      dot.addEventListener('click',()=>showSlide(i));
-      dotsContainer.appendChild(dot);
-    });
-
-    // Marquee
-    const marqueeTextElem = document.getElementById('marqueeText');
-    const marqueeMessages = [
-      "Ageflix recommends movies based on your age",
-      "Find the perfect movie for kids, adults, and seniors",
-      "Your personalized movie guide!",
-      "Discover films suitable for your age",
-      "Enjoy movies safely with Ageflix"
-    ];
-    let marqueeIndex = 0;
-    function updateMarquee(){
-      marqueeTextElem.innerText = marqueeMessages[marqueeIndex];
-      marqueeIndex=(marqueeIndex+1)%marqueeMessages.length;
-    }
-    setInterval(updateMarquee,5000);
-    updateMarquee();
-  </script>
-
+document.getElementById("startBtn").addEventListener("click", init);
+</script>
 </body>
 </html>
-
-
